@@ -1,6 +1,8 @@
 linux (5.3.7-2) UNRELEASED; urgency=medium
 
   * debian/bin/gencontrol_signed.py: Fix code style error
+  * debian/bin/gencontrol.py: Skip linux-perf lintian-overrides if we won't
+    build it
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100
 
